--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="app.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/angular-sanitize/1.5.5/angular-sanitize.min.js'></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-route.js"></script>
+     <script src="https://angular-ui.github.io/ui-router/release/angular-ui-router.js"></script>
      </head>
 
      <body ng-app="NabilsWebsite">
