altered app name and started nav bar creation

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 
 
-     <body ng-app="NabilsWebsite">
+     <body ng-app="Nabilswebsite">
         <div ui-view></div>
           </body>
 </html>
