--- a/templates-home.html
+++ b/templates-home.html
@@ -1,4 +1,5 @@
 <div class="header">
+    <div class="logo" ></div>
     <div class="nav">
         <a ui-sref="contact">Contact</a>
         <a ui-sref="projects">Projects</a>
