added in Home page information and styled

--- a/templates-home.html
+++ b/templates-home.html
@@ -7,4 +7,6 @@
         <a ui-sref="about">About</a>
         <a ui-sref="home">Home</a>
     </div>
+    <h1 id="homeh1"><span>Nabil Sakran</span></h1>
+    <h2 class= "subheading">A programmer with a passion for creativity.</h2>
 </div>
