--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
   </head>
 
      <body ng-app="Nabilswebsite">
-        <div ui-view></div>
+        <div style="position:absolute; height:100%; width:100%; margin:0; overflow:auto;" ui-view></div>
           </body>
 </html>
