fixed routing error for skills (would route back to main page when trying to sort).

--- a/templates-skills.html
+++ b/templates-skills.html
@@ -8,7 +8,7 @@
         <a ui-sref="home">Home</a>
     </div>
     
-<a href="#" ng-init="orderByVariable = 'duration'" ng-click="orderByVariable = 'name'">Sort by Name</a> | <a a href="#" ng-click="orderByVariable = 'duration'">Sort by Duration</a>
+<a href="" ng-init="orderByVariable = 'duration'" ng-click="orderByVariable = 'name'">Sort by Name</a> | <a a href="" ng-click="orderByVariable = 'duration'">Sort by Duration</a>
 
 <ul>
     <li ng-repeat="i in skills | orderBy: orderByVariable">
